<resources>
    <string name="app_name">Droid Caffe</string>
    <string name="action_settings">Settings</string>
    <string name="let_s_try_caramel_ice_cream">Chocolate Shaking Cream</string>
    <string name="droid_caffe">Droid Caffe</string>
    <string name="choose_a_dessert">Choose a Dessert</string>
    <string name="action_chocolate">You ordered Chocolate Shaking Cream</string>
    <string name="action_strawbery">You ordered Strawberry Shaking Cream</string>
    <string name="action_avocado">You ordered Avocado Shaking Cream</string>
    <string name="action_tubruk">You ordered Kopi Tubruk Top Markotop</string>
    <string name="action_waffle">You ordered Waffle Honey Scoop Gelatto</string>
    <string name="choose_a_delivery_method">Choose a delivery method</string>
    <string name="same_day_messeger_service"> Same day messeger service</string>
    <string name="next_day_ground_delivery"> Next day ground delivery</string>
    <string name="chosen"> Chosen : </string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_contact_message">You selected Contact</string>
    <string name="action_order_message">You selected Order</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites</string>
    <string name="ic_status_white">Status white</string>
    <string name="ic_favorites_white">Favorites white</string>
    <string name="pick_up"> Pick Up</string>
    <string name="kasir_droid_cafe">Kasir Droid Cafe</string>
    <string name="pay_now">Pay Now</string>
    <string name="strawbery_shaking_cream">Strawbery Shaking Cream</string>
</resources>
