<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/vertikal_padding"
    android:paddingBottom="@dimen/vertikal_padding"
    android:paddingRight="@dimen/padding_horizontal"
    android:paddingLeft="@dimen/padding_horizontal"
    tools:context=".OrderActivity"
    android:background="@drawable/bgdessert">

    <TextView
        android:id="@+id/order_intro_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="6dp"
        android:textSize="18sp"
        android:fontFamily="casual"
        android:text="@string/choose_a_delivery_method"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/order_intro_text">

        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_day_messeger_service"
            android:fontFamily="casual"
            />

        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_day_ground_delivery"
            android:fontFamily="casual"
            />

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up"
            android:fontFamily="casual"
            />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_round"
        android:text="@string/pay_now"
        android:onClick="LaunchPayActivity"
        android:fontFamily="casual"/>

</RelativeLayout>