<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="@dimen/vertikal_padding"
    android:paddingLeft="@dimen/padding_horizontal"
    android:paddingRight="@dimen/padding_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/droid_caffe"
        android:textSize="@dimen/text_header"
        android:textColor="#FC9803"
        android:textStyle="bold"
        android:fontFamily="casual"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/btn_round">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/choose_dessert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_intro"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:text="@string/choose_a_dessert"
            android:textColor="#0407EE"
            android:fontFamily="casual"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/caramel_ice_cream"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="chocolate"
                    android:padding="@dimen/padding"
                    android:src="@drawable/dessert1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_caramel_ice_cream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="@string/let_s_try_caramel_ice_cream"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/harga1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="Rp 50000"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/strawbery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="strawbery"
                    android:padding="@dimen/padding"
                    android:src="@drawable/dessert2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_dessert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="@string/strawbery_shaking_cream"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/harga2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="Rp 55000"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avocadoshake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="avocado"
                    android:padding="@dimen/padding"
                    android:src="@drawable/dessert3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/desert1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="17dp"
                    android:text="Avocado Shaking Cream"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/harga3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="Rp 50000"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/tubruk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tubruk"
                    android:padding="10dp"
                    android:onClick="tubruk"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/desert3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="17dp"
                    android:text="Kopi Trubuk Top Markotop"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/harga4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="Rp 25000"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/waffle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/waffle"
                    android:padding="10dp"
                    android:onClick="waffle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/desert4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:padding="17dp"
                    android:text="Waffle Honey Scoop Gelatto"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>

                <TextView
                    android:id="@+id/harga5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="17dp"
                    android:text="Rp 45000"
                    android:textColor="#0407EE"
                    android:textStyle="bold"
                    android:fontFamily="casual"/>
            </LinearLayout>
            </LinearLayout>

            </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>